# ci-cd-testing

./: Cargo.toml  Dockerfile  main.c
.github/workflows/: build-image.yaml  compilation.yaml  create-stage-version.yaml
