[package]
name = "regex-file-finder"
version = "0.1.0"
edition = "2021"
authors = ["pedromota533"]
description = "A CLI tool to search files using regex patterns"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/pedromota533/ci-cd-testing"
keywords = ["regex", "search", "cli", "files"]
categories = ["command-line-utilities"]

[dependencies]
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
colored = "2.1"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
